--- a/css/style.css
+++ b/css/style.css
@@ -73,11 +73,76 @@ body ::-webkit-scrollbar {
 }
 
 .wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100vh;
   margin: 0 auto;
-  background: red;
   border: 4px solid orange;
+}
+
+.center_in {
+  animation: center 5s infinite linear;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  width: 500px;
+  box-shadow: inset 0px 0px 50px 10px rgba(147, 86, 220, 0.267), 7px 7px 7px rgba(255, 121, 218, 0.705);
+  position: relative;
+  border-radius: 50%;
+}
+@keyframes center {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
+.text_and_icon {
+  animation: text_and_icon 5s infinite linear;
+}
+@keyframes text_and_icon {
+  0% {
+    transform: rotateZ(20deg);
+  }
+  50% {
+    transform: rotateZ(-200deg);
+  }
+  100% {
+    transform: rotateZ(-340deg);
+  }
+}
+.text_and_icon .fa-utensils,
+.text_and_icon .text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: linear-gradient(#FF79DA 0%, #9356DC 20%, transparent 100%);
+  background-size: 100% 200%;
+  background-position: 0 -100%;
+  animation: text 5s infinite linear;
+  width: 100%;
+  height: auto;
+  font-size: 12vw;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+@keyframes text {
+  0% {
+    background-position: 0 -100%;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+.text_and_icon .text {
+  font-family: "Shrikhand", cursive;
 }
 
 /*# sourceMappingURL=style.css.map */
