--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import "./reset.scss";
 @import "./variables.scss";
 @import "./display.scss";
+@import "./animation.scss";
 
 
 html,
@@ -18,9 +19,46 @@ body {
 }
 
 .wrapper{
+    @include flex_center;
     width:100%;
     height:100vh;
     margin: 0 auto;
-    background:red;
+    // background:$tertiary_color;
     border: 4px solid orange;
 }
+
+
+.center_in{
+    @include animation_center;
+    @include flex_center;
+    height:500px;;
+    width:500px;
+    box-shadow: inset 0px 0px 50px 10px  rgba($primary_color, 0.267), 7px 7px 7px rgba($secondary_color, 0.705);
+    position:relative;
+    border-radius:50%;
+}
+
+
+.text_and_icon{
+    @include text_and_icon;
+
+    .fa-utensils,
+    .text{
+        @include flex_center_column;
+        @include animation_text;
+        width:100%;
+        height:auto;
+        font-size: 12vw;
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
+    }
+
+    .text{
+        font-family: 'Shrikhand', cursive;
+    }
+}
+
+
+
+
