--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,14 +27,34 @@ body {
     border: 4px solid orange;
 }
 
+.container{
+    @include flex_center;
+    width:100%;
+    height:auto;
+    margin: 0.8rem;
+    // background:$tertiary_color;
+    border: 4px solid rgb(0, 255, 13);
+}
+
+
+.center_out{
+    @include flex_center;
+    @include animation_center;
+    height:clamp(250px, 40vw, 800px);
+    width:clamp(250px, 40vw, 800px);
+    position:relative;
+    box-shadow: 7px 7px 3px rgba($secondary_color, 0.705), // X  Y  blur-radius/rayon de flou  spread-radius/rayon étalement
+                7px 7px 7px 7px rgba($primary_color, 0.705);
+    border-radius:50%;
+
+}
 
 .center_in{
-    @include animation_center;
     @include flex_center;
-    height:500px;;
-    width:500px;
-    box-shadow: inset 0px 0px 50px 10px  rgba($primary_color, 0.267), 7px 7px 7px rgba($secondary_color, 0.705);
-    position:relative;
+    height:clamp(250px, 40vw, 800px);
+    width:clamp(250px, 40vw, 800px);
+    position:absolute;
+    box-shadow: inset 0px 0px 50px 25px rgba($primary_color, 0.267);
     border-radius:50%;
 }
 
@@ -48,7 +68,7 @@ body {
         @include animation_text;
         width:100%;
         height:auto;
-        font-size: 12vw;
+        font-size: clamp(3.5rem, 10vw, 12rem);
         -webkit-background-clip: text;
         background-clip: text;
         color: transparent;
@@ -56,8 +76,10 @@ body {
 
     .text{
         font-family: 'Shrikhand', cursive;
+        padding:0 1rem;
     }
 }
+
 
 
 
