--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,6 @@ body ::-webkit-scrollbar {
   width: 100%;
   height: 100vh;
   margin: 0 auto;
-  border: 4px solid orange;
 }
 
 .container {
@@ -96,11 +95,13 @@ body ::-webkit-scrollbar {
   justify-content: center;
   align-items: center;
   animation: center 3s infinite linear;
-  height: clamp(225px, 40vw, 800px);
-  width: clamp(225px, 40vw, 800px);
   position: relative;
-  box-shadow: 7px 7px 3px rgba(255, 121, 218, 0.705), 7px 7px 7px 7px rgba(147, 86, 220, 0.705);
+  width: 45vw;
+  height: 45vw;
+  max-width: 325px;
+  max-height: 325px;
   border-radius: 50%;
+  box-shadow: 0.5vw 0.5vw 0.3vw rgba(255, 121, 218, 0.705), 0.5vw 0.5vw 0.5vw 0.5vw rgba(147, 86, 220, 0.705);
 }
 @keyframes center {
   0% {
@@ -115,15 +116,17 @@ body ::-webkit-scrollbar {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: clamp(325px, 60vw, 900px);
-  width: clamp(325px, 60vw, 900px);
   position: absolute;
-  box-shadow: inset 0px 0px 50px 25px rgba(147, 86, 220, 0.267);
+  width: 70vw;
+  height: 70vw;
+  max-width: 500px;
+  max-height: 500px;
   border-radius: 50%;
+  box-shadow: inset 0px 0px 5vw 2.5vw rgba(147, 86, 220, 0.267);
 }
 
 .text_and_icon {
-  animation: text_and_icon 3s infinite linear;
+  animation: text_and_icon 5s infinite linear;
 }
 @keyframes text_and_icon {
   0% {
@@ -145,13 +148,13 @@ body ::-webkit-scrollbar {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: linear-gradient(#FF79DA 0%, #9356DC 20%, transparent 100%);
-  background-size: 100% 300%;
+  background: linear-gradient(#FF79DA 0%, #9356DC 20%);
+  background-size: 100% 200%;
   background-position: 0 -100%;
-  animation: text 3s infinite linear;
+  animation: text 1.5s infinite linear;
   width: 100%;
   height: auto;
-  font-size: clamp(3.5rem, 10vw, 12rem);
+  font-size: clamp(2rem, 15vw, 7rem);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
