--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,7 +24,7 @@ body {
     height:100vh;
     margin: 0 auto;
     // background:$tertiary_color;
-    border: 4px solid orange;
+    // border: 4px solid orange;
 }
 
 .container{
@@ -39,23 +39,26 @@ body {
 .center_out{
     @include flex_center;
     @include animation_center;
-    height:clamp(225px, 40vw, 800px);
-    width:clamp(225px, 40vw, 800px);
     position:relative;
-    box-shadow: 7px 7px 3px rgba($secondary_color, 0.705), // X  Y  blur-radius/rayon de flou  spread-radius/rayon étalement
-                7px 7px 7px 7px rgba($primary_color, 0.705);
+    width:45vw;
+    height:45vw;
+    max-width: 325px;
+    max-height: 325px;
     border-radius:50%;
-    // background: fff;
-
+    box-shadow: 0.5vw 0.5vw 0.3vw rgba($secondary_color, 0.705), // X  Y  blur-radius/rayon de flou  spread-radius/rayon étalement
+                0.5vw 0.5vw 0.5vw 0.5vw rgba($primary_color, 0.705);
 }
 
 .center_in{
     @include flex_center;
-    height:clamp(325px, 60vw, 900px);
-    width:clamp(325px, 60vw, 900px);
+    // @include center_in_border;
     position:absolute;
-    box-shadow: inset 0px 0px 50px 25px rgba($primary_color, 0.267);
+    width:70vw;
+    height:70vw;
+    max-width: 500px;
+    max-height: 500px;
     border-radius:50%; 
+    box-shadow: inset 0px 0px 5vw 2.5vw rgba($primary_color, 0.267);
 }
 
 
@@ -68,7 +71,7 @@ body {
         @include animation_text;
         width:100%;
         height:auto;
-        font-size: clamp(3.5rem, 10vw, 12rem);
+        font-size: clamp(2rem, 15vw, 7rem);
         -webkit-background-clip: text;
         background-clip: text;
         color: transparent;
@@ -77,10 +80,5 @@ body {
     .text{
         font-family: 'Shrikhand', cursive;
         padding:0 1rem;
-    }
+    } 
 }
-
-
-
-
-
